--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ button {
 .about-left p {
 	text-align: justify;
 	margin-bottom: 30px !important;
-	font-size: 15px;
+	font-size: 14px;
 	line-height: 24px;
 }
 
@@ -214,7 +214,7 @@ button {
 .specification p {
 	font-size: 14px;
 	line-height: 28px;
-	text-align: justify;
+	text-align: center;
 }
 
 .specification-list {
