--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ button {
 }
 
 .about-left p {
-	text-align: justify;
+	text-align: center;
 	margin-bottom: 30px !important;
 	font-size: 13px;
 	line-height: 24px;
