--- a/css/reponsive.css
+++ b/css/reponsive.css
@@ -1,3 +1,52 @@
+@media (max-width:415px)
+{
+	.specification p 
+	{
+		text-align: justify;
+		word-spacing: -0.2em;
+	}
+
+	#finace
+	{
+		height: 250px !important;
+		width: 100%;
+	}
+
+	.road-map-item-date
+	{
+		height:80px !important;
+		padding : 0px !important;
+		width: 100%;
+		text-align: center;
+		background: #21242f;
+	}
+
+	.road-map-item-date h5
+	{
+		top: -14px !important;
+		position: relative;
+	}
+
+	.road-map-item-descption p
+	{
+		text-align: center;
+		position: relative;
+		top : 17px;
+	}
+
+	.road-map-item-progress
+	{
+		padding: 10px !important;
+	}
+
+	.dowanload
+	{
+		left : 40%;
+		width : 100px
+	}
+
+}
+
 /* width 992px */
 @media (min-width: 992px){
 	.navbar-expand-lg .navbar-nav .nav-link {
@@ -74,21 +123,7 @@
 
 }
 
-@media (max-width:415px)
-{
-	.specification p 
-	{
-		text-align: justify;
-		word-spacing: -0.2em;
-	}
 
-	#finace
-	{
-		height: 250px !important;
-		width: 100%;
-	}
-
-}
 
 /* @media (min-width: 1200px)
 {
@@ -139,7 +174,8 @@
 		font-size: 13px; line-height: 20px;
 	}
 	.road-map-item-date {
-		padding: 40px 40px 0px !important; border-right: 0px;
+		padding: 40px 40px 0px; 
+		border-right: 0px;
 	}
 	.road-map-item-date h5 {
 		position: relative;
