--- a/css/style.css
+++ b/css/style.css
@@ -796,3 +796,55 @@ button {
 .hash-bot {
 	width: 100%;
 }
+
+.pocp{
+	color : #fff !important;
+	font-weight: 500;
+	background-image : linear-gradient(to right, #2d98d4 0%, #17a2b8 100%);
+	box-shadow: 1px 1px 10px 5px rgb(7 163 255 / 43%);
+}
+
+.pocp:hover{
+	cursor: pointer;
+}
+
+@media only screen and (min-width: 768px) {
+	.dropdown:hover .dropdown-menu {
+		display: block;
+	}
+}
+
+.dropdown-menu{
+	background : #000 !important;
+	color      : #fff !important;
+	min-width  : 5rem !important;
+}
+
+.dropdown-item{
+	color : #0681f8 !important;
+}
+
+.dropdown-item:hover{
+	background: #000 !important;
+}
+
+.btn-pocp{
+	background-image: linear-gradient(to right, #2d98d4 0%, #007bff 100%) !important;
+	color: #fff !important;
+	font-weight: 600;
+	border-color: #2d98d4 !important;
+	margin: 4px;
+}
+
+.btn-pocp:hover{
+	background-image: linear-gradient(to right, #007bff 0%, #2d98d4 100%) !important;
+}
+
+.modal-body,
+.ekko-lightbox .modal-footer {
+	background-image: linear-gradient(to right, #2d98d4 0%, #007bff 100%) !important;
+}
+
+.modal-footer a{
+	color: #fff;
+}
